# discord-rpc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  changelog.md  config.example  config.example.json
src/: main.rs
