[package]
name = "discord_rpc"
version = "0.1.0"
authors = ["ZackGabri <None>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rpc-client = "^0.3"
settingsfile = "^0.2"
serde_json = "^1.0"
failure = "^0.1"
serde = "^1.0"
time = "^0.1"
iui = "^0.3"

# "windres" allows me to build the code with a Windows Resources file, currently i'm only using it for an icon
# currently i dont need windres so i commented it, once i get a proper icon for the program i will uncomment it
#[target.'cfg(windows)'.build-dependencies]
#windres = "0.2"