[package]
name = "discord_rpc"
version = "0.2.0"
authors = ["ZackGabri <None>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rpc-client = "^0.3"
settingsfile = "^0.2"
serde_json = "^1.0"
failure = "^0.1"
serde = "^1.0"
time = "^0.1"
iui = "^0.3"


[target.'cfg(windows)'.build-dependencies]
windres = "0.2"